evaluate整理和pytorch模型导入导出整理

--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -5333,8 +5333,9 @@
     "\n",
     "官方文档：\n",
     "+ [Transormer --> Main Class --> Trainer](https://huggingface.co/docs/transformers/v4.25.1/en/main_classes/trainer#transformers.Trainer)：API文档\n",
+    "+ [Cource --> 3. Fine-Tuning a pretrained model --> Fine-tuning a model with the Trainer API](https://huggingface.co/course/chapter3/3?fw=pt#fine-tuning-a-model-with-the-trainer-api)：Course里的Trainer教程，作为入手很不错\n",
     "+ [Transformer --> Tutorial --> Fine-tune a pretrained model](https://huggingface.co/docs/transformers/training#train-with-pytorch-trainer)：`transformer`包的教程，比较详细，除了介绍`Trainer`的使用外，还有 Keras 和原始 pytorch 的训练代码\n",
-    "+ [Cource --> 3. Fine-Tuning a pretrained model --> Fine-tuning a model with the Trainer API](https://huggingface.co/course/chapter3/3?fw=pt#fine-tuning-a-model-with-the-trainer-api)：Course里的Trainer教程，可以作为上面教程的补充\n",
+    "\n",
     "\n",
     "\n",
     "Trainer-API的使用主要分为两个部分：\n",
@@ -5641,6 +5642,175 @@
    "source": [
     "# 进行训练\n",
     "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52747763-4490-4d5d-9fb2-8577c6b4ef9f",
+   "metadata": {},
+   "source": [
+    "### 训练脚本\n",
+    "\n",
+    "HF-transformer官方提供了一些常用NLP任务的训练脚本，可以作为一个通用流程进行使用，具体可以参考如下官方文档：\n",
+    "+ [Transformer --> How-to-guides --> General Usage --> Train with a script](https://huggingface.co/docs/transformers/v4.24.0/en/run_scripts#train-with-a-script)：介绍了训练脚本的使用，比较粗略\n",
+    "+ [huggingface/transformer/examples](https://github.com/huggingface/transformers/tree/main/examples)：git仓库里的脚本示例，比较全面"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dd005b0-92fd-43a3-a72c-7755b10b79b2",
+   "metadata": {},
+   "source": [
+    "### 结果评估\n",
+    "\n",
+    "HF官方提供了一个`evaluate`的包，封装了常用一些评估指标，方便使用。\n",
+    "\n",
+    "一共有3类指标：\n",
+    "+ metric：也就是常用的模型评估指标，所有的metric指标见 [Evaluate Metric](https://huggingface.co/evaluate-metric)\n",
+    "+ comparison：用于比较模型的指标\n",
+    "+ measurement：用于评估数据集的指标"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "cf5efa06-5fa6-4faa-bc59-2e45271ccc18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'precision', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'code_eval', 'type': 'metric', 'community': False, 'likes': 3},\n",
+       " {'name': 'roc_auc', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'cuad', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'xnli', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'rouge', 'type': 'metric', 'community': False, 'likes': 4},\n",
+       " {'name': 'pearsonr', 'type': 'metric', 'community': False, 'likes': 1},\n",
+       " {'name': 'mse', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'super_glue', 'type': 'metric', 'community': False, 'likes': 1},\n",
+       " {'name': 'comet', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'cer', 'type': 'metric', 'community': False, 'likes': 3},\n",
+       " {'name': 'sacrebleu', 'type': 'metric', 'community': False, 'likes': 3},\n",
+       " {'name': 'mahalanobis', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'wer', 'type': 'metric', 'community': False, 'likes': 3},\n",
+       " {'name': 'competition_math',\n",
+       "  'type': 'metric',\n",
+       "  'community': False,\n",
+       "  'likes': 0},\n",
+       " {'name': 'f1', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'recall', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'coval', 'type': 'metric', 'community': False, 'likes': 1},\n",
+       " {'name': 'mauve', 'type': 'metric', 'community': False, 'likes': 2},\n",
+       " {'name': 'xtreme_s', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'bleurt', 'type': 'metric', 'community': False, 'likes': 3},\n",
+       " {'name': 'ter', 'type': 'metric', 'community': False, 'likes': 1},\n",
+       " {'name': 'accuracy', 'type': 'metric', 'community': False, 'likes': 6},\n",
+       " {'name': 'exact_match', 'type': 'metric', 'community': False, 'likes': 1},\n",
+       " {'name': 'indic_glue', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'spearmanr', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'mae', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'squad', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'chrf', 'type': 'metric', 'community': False, 'likes': 4},\n",
+       " {'name': 'glue', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'perplexity', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'mean_iou', 'type': 'metric', 'community': False, 'likes': 1},\n",
+       " {'name': 'squad_v2', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'meteor', 'type': 'metric', 'community': False, 'likes': 2},\n",
+       " {'name': 'bleu', 'type': 'metric', 'community': False, 'likes': 5},\n",
+       " {'name': 'wiki_split', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'sari', 'type': 'metric', 'community': False, 'likes': 2},\n",
+       " {'name': 'frugalscore', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'google_bleu', 'type': 'metric', 'community': False, 'likes': 2},\n",
+       " {'name': 'bertscore', 'type': 'metric', 'community': False, 'likes': 6},\n",
+       " {'name': 'matthews_correlation',\n",
+       "  'type': 'metric',\n",
+       "  'community': False,\n",
+       "  'likes': 6},\n",
+       " {'name': 'seqeval', 'type': 'metric', 'community': False, 'likes': 6},\n",
+       " {'name': 'trec_eval', 'type': 'metric', 'community': False, 'likes': 3},\n",
+       " {'name': 'rl_reliability', 'type': 'metric', 'community': False, 'likes': 2},\n",
+       " {'name': 'poseval', 'type': 'metric', 'community': False, 'likes': 1},\n",
+       " {'name': 'brier_score', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'mase', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'mape', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'smape', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'nist_mt', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'character', 'type': 'metric', 'community': False, 'likes': 0},\n",
+       " {'name': 'charcut_mt', 'type': 'metric', 'community': False, 'likes': 0}]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 查看可用的指标\n",
+    "import evaluate\n",
+    "\n",
+    "metrics = evaluate.list_evaluation_modules(module_type=\"metric\", include_community=False, with_details=True)\n",
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d24aec03-ea66-4962-9cd8-d30c4a4dc564",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = evaluate.load('accuracy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "75121720-84cf-4df4-80a8-9c257effb521",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EvaluationModule(name: \"accuracy\", module_type: \"metric\", features: {'predictions': Value(dtype='int32', id=None), 'references': Value(dtype='int32', id=None)}, usage: \"\"\"\n",
+       "Args:\n",
+       "    predictions (`list` of `int`): Predicted labels.\n",
+       "    references (`list` of `int`): Ground truth labels.\n",
+       "    normalize (`boolean`): If set to False, returns the number of correctly classified samples. Otherwise, returns the fraction of correctly classified samples. Defaults to True.\n",
+       "    sample_weight (`list` of `float`): Sample weights Defaults to None.\n",
+       "\n",
+       "Returns:\n",
+       "    accuracy (`float` or `int`): Accuracy score. Minimum possible value is 0. Maximum possible value is 1.0, or the number of examples input, if `normalize` is set to `True`.. A higher score means higher accuracy.\n",
+       "\n",
+       "Examples:\n",
+       "\n",
+       "    Example 1-A simple example\n",
+       "        >>> accuracy_metric = evaluate.load(\"accuracy\")\n",
+       "        >>> results = accuracy_metric.compute(references=[0, 1, 2, 0, 1, 2], predictions=[0, 1, 1, 2, 1, 0])\n",
+       "        >>> print(results)\n",
+       "        {'accuracy': 0.5}\n",
+       "\n",
+       "    Example 2-The same as Example 1, except with `normalize` set to `False`.\n",
+       "        >>> accuracy_metric = evaluate.load(\"accuracy\")\n",
+       "        >>> results = accuracy_metric.compute(references=[0, 1, 2, 0, 1, 2], predictions=[0, 1, 1, 2, 1, 0], normalize=False)\n",
+       "        >>> print(results)\n",
+       "        {'accuracy': 3.0}\n",
+       "\n",
+       "    Example 3-The same as Example 1, except with `sample_weight` set.\n",
+       "        >>> accuracy_metric = evaluate.load(\"accuracy\")\n",
+       "        >>> results = accuracy_metric.compute(references=[0, 1, 2, 0, 1, 2], predictions=[0, 1, 1, 2, 1, 0], sample_weight=[0.5, 2, 0.7, 0.5, 9, 0.4])\n",
+       "        >>> print(results)\n",
+       "        {'accuracy': 0.8778625954198473}\n",
+       "\"\"\", stored examples: 0)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy"
    ]
   },
   {
