HF-Trainer-API研究整理

--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -5347,7 +5347,7 @@
     "+ `Seq2SeqTrainingArguments` + `Seq2SeqTrainer`：用于序列模型的训练，这两个类分别继承了上面的类，`Seq2SeqTrainingArguments`扩充了几个属性，`Seq2SeqTrainer` 重写了几个父类方法\n",
     "\n",
     "如果要自定义一些训练流程，可以继承`Trainer`类，然后重写其中的如下方法：\n",
-    "+ `trainning_step()`\n",
+    "+ `training_step()`\n",
     "+ `compute_loss()`\n",
     "+ `evaluate()`\n",
     "+ `prediction_step()`\n",
@@ -5359,6 +5359,120 @@
     "> **稍微看了下`Trainer`的源码，发现其中添加了许多逻辑，比如参数检查，最大batch_size的检查，各种回调方法，多GPU的支持，梯度修剪等等。  \n",
     "我的感觉是，这个API可以用，但是不要滥用，其中封装了许多对于初学者来说不必要的逻辑。  \n",
     "不过如果作为研究的对象还不错，其中有许多优化求解的操作，应该值得研究。**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52c2c779-4c95-4981-822c-e8320b3e0011",
+   "metadata": {},
+   "source": [
+    "#### Trainer-Callback\n",
+    "\n",
+    "API参考文档：\n",
+    "+ [Callbacks](https://huggingface.co/docs/transformers/main_classes/callback#callbacks)\n",
+    "+ [Utilities for Trainer](https://huggingface.co/docs/transformers/internal/trainer_utils#utilities-for-trainer)\n",
+    "\n",
+    "Callback相关的类主要是服务于`Trainer`API（**仅支持PyTorch**）的，主要是用来自定义training loop中的一些监控操作，比如日志打印，是否保存检查点，是否提前停止训练等。\n",
+    "\n",
+    "Callback是 “**只读**” 的操作，它只能读取训练过程中的信息，但是不能更改训练过程中的参数，唯一能做的，就是修改`TrainerControl`这个类的状态，从而影响Trainer的训练行为。\n",
+    "\n",
+    "Callback相关的支持类有如下几个（都在`transformer.trainer_callback.py`文件里）：\n",
+    "\n",
+    "+ `TrainerState`：是一个`dataclass`修饰的数据类，里面主要是记录了训练的一些状态参数\n",
+    "\n",
+    "+ `TrainerControl`：也是一个`dataclass`修饰的数据类，里面封装了一些决定训练过程下一步的属性，**这些属性都是bool值**，以供Trainer判断下一步的操作，不过可供判断的操作不多，所以这个类的属性也不多：\n",
+    "  + `should_training_stop`:\n",
+    "  + `should_epoch_stop`:\n",
+    "  + `should_save`\n",
+    "  + `should_evaluate`\n",
+    "  + `should_log`   \n",
+    "  .\n",
+    "\n",
+    "\n",
+    "+ `TrainerCallback`：这是一个起到抽象类作用的类\n",
+    "  + 定义了callback的**抽象事件方法**，比如`on_train_begin()`, `on_epoch_begin()`等，这些方法会在训练过程中的指定步骤执行，用于检查当前的训练状态。\n",
+    "  + 所有定义的方法的参数签名都为`(self, args: TrainingArguments, state: TrainerState, control: TrainerControl, **kwargs)`:\n",
+    "    + `args`, `state` 这两个参数用于获取训练参数和当前的训练状态，**这两个对象在所有方法内都无法更改属性**；\n",
+    "    + `control`是记录控制流的类——**它是所有方法里唯一能更改的对象**；\n",
+    "    + `kwargs`记录的是其他可能自定义的参数\n",
+    "  + 所有的方法通过更改 `control` 对象的属性，然后**返回此 `control` 对象**，来告知Trainer当前步之后做什么判断\n",
+    "  + **所有的callback操作，都必须继承此类，然后实现其中的指定方法**，不过这个类没有 `__init__()` 方法   \n",
+    "  .\n",
+    "  \n",
+    "+ `CallbackHandler`：用于执行所有注册的callback\n",
+    "  + 这个类也继承了`TrainerCallback`，并且增加了 `__init__()` 方法，参数是训练过程中的常见信息\n",
+    "  + 增加了`add_callback()`,`remove_callback()`等方法，用于添加`TrainerCallback`的子类对象\n",
+    "  + 重写了`TrainerCallback`类里的所有 `on_XXX()` 方法，不过其中的均是调用 `self.call_event(\"on_XXX\", args, state, control)` 这个方法\n",
+    "  + 增加了**一个 `call_event()` 方法**，该方法里，会调用所有 callback 里的对应方法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ca7a242-dd7e-4a28-a39b-95573d32300e",
+   "metadata": {},
+   "source": [
+    "#### Trainer源码分析\n",
+    "\n",
+    "这里主要看了一下`Trainer.train()`方法里的逻辑：\n",
+    "1. `train()`方法里主要是做一些模型初始化，加载checkpoint，封装模型的操作，之后会调用 `inner_training_loop()` 方法，在该方法里完成训练\n",
+    "\n",
+    "2. `inner_training_loop()` 方法里的训练过程，会在对应步骤调用如下的 callback 方法，并且根据返回的 `TrainerControl` 对象判断接下来的操作\n",
+    "   + `self.control = self.callback_handler.on_train_begin(args, self.state, self.control)`\n",
+    "   + `self.control = self.callback_handler.on_epoch_begin(args, self.state, self.control)`\n",
+    "   + `self.control = self.callback_handler.on_step_begin(args, self.state, self.control)`\n",
+    "   + `self.control = self.callback_handler.on_step_end(args, self.state, self.control)`\n",
+    "   + `self.control = self.callback_handler.on_epoch_end(args, self.state, self.control)`\n",
+    "   + `self.control = self.callback_handler.on_train_end(args, self.state, self.control)`\n",
+    "\n",
+    "3. `inner_training_loop()` 方法里，会在**每一个 step 和 每一个 epoch 结束后**，调用 `self._maybe_log_save_evaluate(tr_loss, model, trial, epoch, ignore_keys_for_eval)` 方法，其中会根据 `self.control` 对象的状态，决定要不要做如下操作：\n",
+    "   + 是否打印相关日志\n",
+    "   + 是否保存检查点\n",
+    "   + 是否进行 evaluate 操作\n",
+    "  \n",
+    "4. `train()` 方法结束后，会返回一个`TrainOutput(self.state.global_step, train_loss, metrics)` 对象，它其实就是一个namedtuple，只是简单封装了训练过程的3个信息\n",
+    "\n",
+    "5. `train()` 方法结束后，**并不会保存最终的模型**，指定的输出文件夹里，**只有几个checkpoint的子文件夹**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "165d1f2c-e5cc-452a-b94f-451ef1f55f74",
+   "metadata": {},
+   "source": [
+    "#### Trainer保存结果\n",
+    "\n",
+    "一般在调用完`Trainer.train()`方法之后，还需要调用`Trainer.save_model()`方法，保存最终训练好的模型，这个方法的主要逻辑如下：\n",
+    "1. 检查模型是不是`PreTrainedModel`或者其子类示例，或者是不是该类的封装，是的话，就调用`save_pretrained()`方法保存模型——也就是对于HF-Transformer自己提供的模型，后续可以直接使用`from_pretrained()`方法加载\n",
+    "2. 对于其他的模型，则调用 `torch.save(self.model.state_dict(), os.path.join(output_dir, WEIGHTS_NAME))` 的方式，保存模型的权重参数\n",
+    "3. 调用`self.tokenizer.save_pretrained(output_dir)`保存tokenizer的配置信息\n",
+    "4. 调用`torch.save(self.args, os.path.join(output_dir, TRAINING_ARGS_NAME))`保存模型的训练参数\n",
+    "\n",
+    "调用完`Trainer.save_mode()` 之后，通常日志里会显示保存了如下几个文件：\n",
+    "```shell\n",
+    "Saving model checkpoint to test-trainer\n",
+    "Configuration saved in test-trainer\\config.json\n",
+    "Model weights saved in test-trainer\\pytorch_model.bin\n",
+    "tokenizer config file saved in test-trainer\\tokenizer_config.json\n",
+    "Special tokens file saved in test-trainer\\special_tokens_map.json\n",
+    "```\n",
+    "但是实际保存的文件有：\n",
+    "+ config.json\n",
+    "+ pytorch_model.bin\n",
+    "+ special_tokens_map.json\n",
+    "+ tokenizer.json\n",
+    "+ tokenizer_config.json\n",
+    "+ training_args.bin\n",
+    "+ vocab.txt\n",
+    "\n",
+    "如果需要，还可以调用`Trainer.save_state()`方法，保存训练状态为 trainer_state.json 文件."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "858cbe5e-f50f-4f2f-a588-94d4d5e5e7c6",
+   "metadata": {},
+   "source": [
+    "#### Trainer使用示例"
    ]
   },
   {
