HF缓存和离线模式整理

--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -2196,6 +2196,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "906f45d5-8bf2-41ae-87c9-2b4946fb4855",
+   "metadata": {},
+   "source": [
+    "### 数据缓存管理\n",
+    "\n",
+    "参考文档：\n",
+    "+ [General Usage --> Cache Management](https://huggingface.co/docs/datasets/cache)\n",
+    "+ [General Usage --> Load --> Offline](https://huggingface.co/docs/datasets/loading#offline)\n",
+    "\n",
+    "`datasets`包默认的数据集下载目录是 `~/.cache/huggingface/datasets`，可以通过设置环境变量 `HF_DATASETS_CACHE` 来指向自定义的缓存目录。\n",
+    "\n",
+    "此外，也可以通过`load_dataset()` 方法里的 `cache_dir` 参数设置缓存路径：\n",
+    "\n",
+    "```python\n",
+    "from datasets import load_dataset\n",
+    "dataset = load_dataset('LOADING_SCRIPT', cache_dir=\"PATH/TO/MY/CACHE/DIR\")\n",
+    "\n",
+    "# 这个也同样适用于 evaluate 包\n",
+    "from datasets import load_metric\n",
+    "metric = load_metric('glue', 'mrpc', cache_dir=\"MY/CACHE/DIRECTORY\")\n",
+    "```\n",
+    "\n",
+    "清除缓存可以使用如下方式：\n",
+    "```python\n",
+    "# 返回清除的数据集个数\n",
+    ">>> dataset.cleanup_cache_files()\n",
+    "2\n",
+    "```\n",
+    "\n",
+    "如果没有网络，或者说想使用离线模式，可以设置环境变量 `HF_DATASETS_OFFLINE=1`。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c1cbc6e3-0f3e-4c2b-aed6-b1308c226b62",
    "metadata": {},
    "source": [
@@ -3694,6 +3728,24 @@
     "  这些模型都比较大，可以提前下载下来。\n",
     "\n",
     "我一般常用的两个模型是 **BERT** 和 **Distil-BERT**，所以下面会着重关注这两个模型里的实现。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59a32044-b4c7-482b-8c6a-57f158a4691d",
+   "metadata": {},
+   "source": [
+    "### 缓存管理\n",
+    "\n",
+    "参考文档：\n",
+    "+ [Get Started --> Installation --> Cache setup](https://huggingface.co/docs/transformers/installation#cache-setup)\n",
+    "\n",
+    "默认下，`transformers`模块下载的模型都在 `~/.cache/huggingface/hub` 目录下，可以通过设置如下环境变量来指向自定义存储位置，顺序就是优先级：\n",
+    "1. `HUGGINGFACE_HUB_CACHE` 或者 `TRANSFORMERS_CACHE`\n",
+    "2. `HF_HOME`\n",
+    "3. `XDG_CACHE_HOME` + `/huggingface`\n",
+    "\n",
+    "如果想以离线模式使用 `transformer` 包，可以设置环境变量 `TRANSFORMERS_OFFLINE=1`。"
    ]
   },
   {
