--- a/DataVisualization/Python-Seaborn.ipynb
+++ b/DataVisualization/Python-Seaborn.ipynb
@@ -885,8 +885,7 @@
     "+ `lineplot([x, y, hue, size, style, data, …])`  \n",
     "绘制折线图(`kind=line`)\n",
     "\n",
-    "+ 数据结构：\n",
-    ">不论是散点图还是折线图，展示的都是**两个连续变量**之间的关系，所以要求绘图的变量`x`和`y`都为**连续数值**类型。"
+    "+ 数据结构：不论是散点图还是折线图，展示的都是**两个连续变量**之间的关系，所以要求绘图的变量`x`和`y`都为**连续数值**类型。"
    ]
   },
   {
@@ -1416,7 +1415,10 @@
     "+ 估计图\n",
     "  + `pointplot()`: (`kind=\"point\"`)\n",
     "  + `barplot()`: 条形图(`kind=\"bar\"`)\n",
-    "  + `countplot()`: 频数直方图(`kind=\"count\"`)"
+    "  + `countplot()`: 频数直方图(`kind=\"count\"`)\n",
+    "  \n",
+    "注意\n",
+    "> 虽然这里是做的**分类变量 vs 连续变量**的**双变量分析**，但是上面的这些函数也可以用于**连续变量的单变量分析**——只传入一个连续特征，此时分类特征默认只有一个."
    ]
   },
   {
@@ -1430,10 +1432,11 @@
     "> 绘制的是在分类特征的**每个类别里连续特征是如何分布的**，用于**分析分类特征的不同类别取值对于连续特征的分布影响**。\n",
     "\n",
     "主要有如下两个函数\n",
-    "+ `stripplot([x, y, hue, data, order, …])`  \n",
+    "+ `stripplot(data=None, *, x=None, y=None, hue=None, order=None, hue_order=None, jitter=True, dodge=False, orient=None, color=None, palette=None, size=5, edgecolor='gray', linewidth=0, hue_norm=None, native_scale=False, formatter=None, legend='auto', ax=None, **kwargs)`  \n",
     "  + Draw a scatterplot where **one variable is categorical**. (`kind=strip`，默认)  \n",
-    "  + `jitter`参数控制点左右的分散程度。\n",
-    "\n",
+    "  + `jitter`：是否随机散开点\n",
+    "  + `orient`：`v`（垂直绘制） 或者 `h`（水平绘制），这个参数显得有点多余，因为可以通过交换x,y的值来实现   \n",
+    ".\n",
     "\n",
     "+ `swarmplot([x, y, hue, data, order, …])`  \n",
     "  + Draw a categorical scatterplot with **non-overlapping** points，(`kind=swarm`) .     \n",
@@ -1493,7 +1496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 分布图（箱线图）   \n",
+    "## 分布对比图（分组箱线图）   \n",
     "\n",
     "绘图的数据结构：\n",
     "> 一个变量是**分类**特征，另一个是**连续**特征。  \n",
@@ -1501,11 +1504,11 @@
     "\n",
     "\n",
     "有如下三个绘图函数：\n",
-    "+ `boxplot([x, y, hue, data, order, hue_order, …])` 箱线图，(`kind=box`)\n",
+    "+ `boxplot([x, y, hue, data, order, hue_order, …])` 箱线图(`kind=box`)\n",
     "\n",
-    "+ `boxenplot([x, y, hue, data, order, …])` 多阶梯箱线图，适合大数据集，(`kind=boxen`)\n",
+    "+ `boxenplot([x, y, hue, data, order, …])` 多阶梯箱线图，**适合大数据集**(`kind=boxen`)\n",
     "\n",
-    "+ `violinplot([x, y, hue, data, order, …])` 小提琴图，箱线图与核密度估计图的结合，(`kind=violin`)"
+    "+ `violinplot([x, y, hue, data, order, …])` 小提琴图，箱线图与核密度估计图的结合(`kind=violin`)"
    ]
   },
   {
@@ -1685,7 +1688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 估计图（条形图）  \n",
+    "## 估计图（分组条形图）  \n",
     "\n",
     "Categorical **estimate** plots. \n",
     "\n",
@@ -1976,6 +1979,12 @@
     "# 可视化数据集分布\n",
     "\n",
     "官方文档 [Visualizing the distribution of a dataset](https://seaborn.pydata.org/tutorial/distributions.html)，用于可视化数据集的分布，这部分的绘图函数**最适合做EDA**。\n",
+    "\n",
+    "Axes-Level绘图函数有如下几个：\n",
+    "+ `hisplot()`：直方图\n",
+    "+ `kdeplot()`\n",
+    "+ `rugplot()`\n",
+    "+ `ecdfplot()`\n",
     "\n",
     "顶层绘图函数(**Figure-Level**)有三个：\n",
     "+ `displot()`\n",
@@ -2742,10 +2751,10 @@
     "\n",
     "官方文档 [Visualizing regression models](https://seaborn.pydata.org/tutorial/regression.html).\n",
     "\n",
-    "+ `regplot(x, y[, data, x_estimator, x_bins, …])`  \n",
+    "+ `regplot(x, y[, data, x_estimator, x_bins, …])`——Axes-level  \n",
     "Plot data and a linear regression model fit.\n",
     "\n",
-    "+ `lmplot(x, y, data[, hue, col, row, palette, …])`  \n",
+    "+ `lmplot(x, y, data[, hue, col, row, palette, …])`——Figure-level  \n",
     "Plot data and regression model fits across a FacetGrid.\n",
     "\n",
     "+ `residplot(x, y[, data, lowess, x_partial, …])`  \n",
@@ -2912,9 +2921,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BaseEnv(Python3.8.10)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2926,7 +2935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "toc-autonumbering": true,
   "toc-showmarkdowntxt": false
