--- a/DataVisualization/Python-Matplotlib.ipynb
+++ b/DataVisualization/Python-Matplotlib.ipynb
@@ -12,7 +12,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Tips"
    ]
@@ -86,7 +88,9 @@
     "`matplotlib`的图形由以下**四个部分**组成：  \n",
     "`Figure` + `Axes` + `Axis` + `Artist`  \n",
     "\n",
-    "其中最主要的是前两个："
+    "其中最主要的是前两个：\n",
+    "\n",
+    "<img src=\"images/matplotlib-figure-components.webp\" alt=\"figure-components\" style=\"zoom:40%;\" align=\"left\"/>"
    ]
   },
   {
@@ -1606,6 +1610,15 @@
     "+ `matplotlib.Figure.set_size_inches()`方法\n",
     "\n",
     "上述方法接受的参数形式为：`(width, height)`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 图形边距设置\n",
+    "\n",
+    "+ `plt.tight_layout()` 或者 `fig.tight_layout()`"
    ]
   },
   {
