复习特征工程

--- a/DataMining-Actions/00-feature-engeneering.ipynb
+++ b/DataMining-Actions/00-feature-engeneering.ipynb
@@ -906,6 +906,7 @@
     "注意：\n",
     "> + 对于树模型，一般不需要做特征缩放处理，因为它们对于特征尺度并不敏感。  \n",
     "> + 对于大部分为0的稀疏数据，不要使用上述的缩放，特别是min-max和标准化，因为这两种变换都会将原始值平移一段距离，因此**会将稀疏特征向量变成密集特征向量**！！！\n",
+    "> + 归一化会改变数据的原始距离、分布和信息，但是标准化不会。\n",
     "\n",
     "\n",
     "常见的特征缩放有如下方式："
@@ -917,9 +918,9 @@
     "tags": []
    },
    "source": [
-    "### 归一化  \n",
+    "### min-max缩放  \n",
     "\n",
-    "使用最大值和最小值来进行归一化，将数据缩放到 $[0, 1]$ 之间.\n",
+    "使用最大值和最小值来进行缩放，将数据缩放到 $[0, 1]$ 之间.\n",
     "\n",
     "sklearn中提供了如下的类实现该操作，并且在标准的基础上增加了缩放到指定区间（feature_range参数）的操作，原理如下.  \n",
     "设 feature_range= $[min, max]$，给定数据X，最大值和最小值分别为 $[X_{min}, X_{max}]$，那么归一化公式为：  \n",
@@ -1243,8 +1244,8 @@
    "source": [
     "## One-Hot编码、Dummy编码和Effective编码\n",
     "\n",
-    "+ One-Hot编码：将有$k$类别的分类变量编码成一个长度为$k$的 0-1 向量，不过这种方式使用的比特位要多一位，它有$k$个自由度。\n",
-    "+ Dummy编码(dummy coding)：只使用长度为$k-1$的 0-1 向量，也因此只有$k-1$个自由度。\n",
+    "+ One-Hot编码：将有 $k$ 类别的分类变量编码成一个长度为 $k$ 的 0-1 向量，不过这种方式使用的比特位要多一位，它有 $k$ 个自由度。\n",
+    "+ Dummy编码(dummy coding)：只使用长度为 $k-1$ 的 0-1 向量，也因此只有 $k-1$ 个自由度。\n",
     "+ Effective编码(effective coding)：和虚拟编码类似，但是它的参照类取值是-1，而不是0，相比较于虚拟编码，它的区别在于使线性模型更加容易解释。\n",
     "\n",
     "pandas中提供了用于实现前两种编码的方法：  \n",
@@ -1254,7 +1255,7 @@
     "  + drop_first: 是否保留第一个level的编码，也就是在one-hot和dummy中选择，默认为False，也就是one-hot编码\n",
     "  + dtype: 注意，默认下编码后的特征列的类型为`np.unit8`，它是**无符号整数**。\n",
     "  \n",
-    "但是pandas的函数问题在于，只能用于训练数据，它不方便在预测数据上重复相同的操作——也就是无法作为pipeline。"
+    "但是pandas的函数问题在于，**只能用于训练数据，它不方便在预测数据上重复相同的操作——也就是无法作为pipeline**。"
    ]
   },
   {
@@ -1691,7 +1692,7 @@
    "source": [
     "#### LabelEncoder()\n",
     "\n",
-    "目标变量是类别型，需要进行编码.\n",
+    "目标变量是类别型，需要进行编码.   \n",
     "`preprocessing.LabelEncoder()`，这个类适用于对**目标变量**进行序数编码的。   \n",
     "它的使用很简单，没有参数，支持将数值或者字符串编码为从 0 开始的数字"
    ]
@@ -6777,9 +6778,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-analysis(Python3.8.12)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "data-analysis"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -6791,7 +6792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   },
   "toc-autonumbering": true
  },
