--- a/DataVisualization/Python-Matplotlib.ipynb
+++ b/DataVisualization/Python-Matplotlib.ipynb
@@ -1659,7 +1659,9 @@
     "\n",
     "+ `**kwargs`包括的常用参数有：\n",
     "  + `loc`，指定大致的位置\n",
-    "  + `bbox_to_anchor`，使用坐标更加精细的指定位置"
+    "  + `bbox_to_anchor`，使用坐标更加精细的指定位置\n",
+    "  \n",
+    "> 大部分绘图的方法里，都可以接收一个`label`参数，用于指定该次绘图对应的图例名称"
    ]
   },
   {
