--- a/DataVisualization/Python-Seaborn.ipynb
+++ b/DataVisualization/Python-Seaborn.ipynb
@@ -512,6 +512,15 @@
     "+ `style`: name in data, optional  \n",
     "Grouping variable that will produce elements with **different styles**.  Can have a numeric dtype but will always be treated as categorical.\n",
     "\n",
+    "+ `palette`: string, list, dict, or `matplotlib.colors.Colormap`   \n",
+    "用于指定`hue`进行颜色映射的选择范围，可以是如下方式：\n",
+    "  + str：这时候的值会被传递给 `seaborn.color_palette()` 函数\n",
+    "  + list：比如 `['red', 'blue']`，注意，此时也意味着 `hue` 对应的变量是 categorical 的\n",
+    "  + `matplotlib.colors.Colormap`对象：直接设置颜色映射，注意，此时表明 `hue` 对应的变量是连续的   \n",
+    ".\n",
+    "\n",
+    "+ `color`：直接指定颜色的string，大部分函数都可以使用\n",
+    "\n",
     "+ `row, col`: names of variables in data, optional  \n",
     "Categorical variables that will determine the faceting of the grid.  \n",
     "用于对数据集进行分割的分类变量。这些变量不同的取值组合划分出来的数据集会在一个单独的子图上绘图。  \n",
