--- a/DataVisualization/Python-Matplotlib.ipynb
+++ b/DataVisualization/Python-Matplotlib.ipynb
@@ -1802,7 +1802,7 @@
     "1. [**Choosing Colormaps in Matplotlib**](https://matplotlib.org/tutorials/colors/colormaps.html)  \n",
     "介绍了matplotlib里colormap的类型以及具体的颜色变化（这个比较有用）.\n",
     "2. [**Creating Colormaps in Matplotlib**](https://matplotlib.org/tutorials/colors/colormap-manipulation.html)  \n",
-    "介绍了如何创建自己的colormap（没啥用）.\n",
+    "介绍了如何创建自己的colormap（可以了解具体的原理）.\n",
     "3. [**Colormap reference**](https://matplotlib.org/gallery/color/colormap_reference.html)  \n",
     "这个绘制出了不同colormap的具体样子（在 文档1 中也有这些图）.\n",
     "\n",
