--- a/DataVisualization/Python-Seaborn.ipynb
+++ b/DataVisualization/Python-Seaborn.ipynb
@@ -496,6 +496,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 色彩管理\n",
+    "\n",
+    "参考官方文档 [Tutorial --> Choosing color palettes](https://seaborn.pydata.org/tutorial/color_palettes.html#choosing-color-palettes).\n",
+    "\n",
+    "通常颜色在数学上是使用 RGB三原色 或其他的编码方式来表示的，但是seaborn中，出发点是视觉感官的角度，所以对颜色的描述是使用：**hue（色彩），saturation（饱和度），luminance（亮度）**这3个维度。\n",
+    "\n",
+    "seaborn中颜色使用的一个通常准则是：\n",
+    "1. 描述多个category时，使用 hue 维度\n",
+    "2. 描述连续的数值变化时，使用 lumination 维度.  \n",
+    "不过在实际使用中，这两个维度对应的参数都是使用的 `hue`.\n",
+    "\n",
+    "seaborn中控制颜色的主要工具是 `seaborn.color_palette()` 函数，这个函数是seaborn中控制色彩的入口，**任何含有`palette`参数的绘图API底层都会使用这个函数**.\n",
+    "+ `seaborn.color_palette(palette=None, n_colors=None, desat=None, as_cmap=False)`\n",
+    "  + `paletee`，可以使用如下的方式指定：\n",
+    "    + str: 指定seaborn中自带的palette\n",
+    "    + str: 指定matplotlib中的 colormap\n",
+    "    + A sequence of colors in any format matplotlib accepts\n",
+    "  + `as_cmap`：为`True`时，返回的是 `matplotlib.colors.ListedColormap`\n",
+    "  \n",
+    " seaborn提供的色彩方案有如下几种：\n",
+    " + Quanlitative color palette: \n",
+    "   + deep\n",
+    "   + muted\n",
+    "   + pastel\n",
+    "   + bright\n",
+    "   + dark\n",
+    "   + colorblind\n",
+    " + Sequential color palette:\n",
+    "   + rocket\n",
+    "   + mako \n",
+    "   + flare\n",
+    "   + crest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 绘图的公用参数\n",
     "\n",
     "seaborn的绘图函数里，公用的一些参数含义如下：\n",
